-*- change-log -*-
2014-07-06 Killer{R} <support@killprog.com>
	Avoid memcpy when possible during buffered read (send directly from buffer memory)
	SOCK_RXRING option is off by default (it appeared that stupid but aligned buffer often faster)
	All IO buffers now aligned to page boundary instead of 512 bytes. It also sometimes faster
	Fixed long delay on exit when compiled without SOCK_RXRING
	More flexible selecting blocks/frames count for mapped buffer (if SOCK_RXRING enabled)

2014-06-22 Killer{R} <support@killprog.com>
	added Freeze feature
	AIO optimized for FS/device block sizes >512 bytes

2014-06-09 Killer{R} <support@killprog.com>
	added Extensions command to negotiate features 
	removed -t and -T options (negotiated now)
	read requests coalescing (negotiated extension)
	doaoe()&co moved to doaoe.c

2014-06-04 Killer{R} <support@killprog.com>
	added some features and forked as AoEde project:
	using PACKET_RX_RING to receive packets under Linux 
	IO buffering with using of Linux AIO
	tags sequencing to avoid misordered writes 

2013-03-18 Ed Cashin <ecashin@coraid.com>
	add big-endian support from Daniel Mealha Cabrita <dancab@gmx.net>
	vblade-21

2009-08-14 Sam Hopkins <sah@coraid.com>
	bugfix: aoe command error did not set Error bit in flags
	add support for AoEr11
	set ident serial to shelf.slot:hostname
	vblade-20

2008-10-08 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's bpf fix for FreeBSD
	add Ryan Thomas's fix to stop bufcnt being overridden
	vblade-19
	
2008-07-14 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's block device options patch
	add Chris Webb's socket options patch for better jumbo handling
	remove obsolete contrib/o_direct.diff
	vblade-18

2008-06-09 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's latest BPF patch to vblade, remove from contrib
	update contributed AIO patch for compatibility with current sources
	vblade-17
	
2008-05-07 Ed Cashin <ecashin@coraid.com>
	add Chris Webb's AIO patch to the contributions